gcc/testsuite/gdc.test/compilable/test59.d
// PERMUTE_ARGS:

public import imports.test59a;
public import imports.test59b;
